--- a/src/styles/component.css
+++ b/src/styles/component.css
@@ -32,7 +32,7 @@
     border-radius: 10px;
     user-select: none;
     width: 100%;
-    height: fit-content;
+    height: 100%!important;
 }
 
 .card-content {
