--- a/src/styles/myStyles.css
+++ b/src/styles/myStyles.css
@@ -121,7 +121,9 @@ header ul li a.active {
 #home {
     width: 100%;
     height: 100vh;
-    background-image: var(--bg-img);
+    /* background-color: #000000; */
+    background-image: url("https://www.transparenttextures.com/patterns/asfalt-light.png");
+    /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
     background-color: var(--bg-color);
     transition: all 1s ease-in-out !important;
 }
@@ -306,7 +308,7 @@ header ul li a.active {
 
 .skills-container {
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-columns: 50% 50%;
     justify-items: center;
     transition: all 1s linear !important;
     position: relative;
@@ -331,6 +333,8 @@ header ul li a.active {
 }
 
 .skills-content>p {
+    list-style: disc outside none;
+    display: list-item;
     cursor: default;
     font-size: var(--h6-font-size);
     padding: 3px 0;
